syntax = "proto3";

package xbasissvc.external.user;

import "konekko.me/xbasis/commons/dto/commons.proto";

service Login {

    //phone, email, account
    rpc WithAccount (EntryRequest) returns (EntryWithAccountResponse);

    //use phone confirm
    rpc WithQRCode (EntryRequest) returns (EntryWithQRCodeResponse);

    //phone or email
    rpc WithValidateCode (EntryRequest) returns (EntryWithQRCodeResponse);
}

message EntryRequest {
    string content = 1;
    string account = 2;
    string clientId = 3;
}

message EntryWithAccountResponse {
    xbasis.commons.dto.State state = 1;
    string accessToken = 2;
    string refreshToken = 3;
}

message EntryWithQRCodeRequest {
    string clientId = 1;
}

message EntryWithQRCodeResponse {
    xbasis.commons.dto.State state = 1;
    string code = 2;
}